# RP

./: README.md
ROS1/action_exam/: CMakeLists.txt  package.xml
ROS1/action_exam/action/: Primenumber.action
ROS1/action_exam/src/: action_exam_client.cpp  action_exam_server.cpp
ROS1/service_exam/: CMakeLists.txt  package.xml
ROS1/service_exam/src/: service_exam_client.cpp  service_exam_server.cpp
ROS1/topic_exam/: CMakeLists.txt  package.xml
ROS1/topic_exam/src/: topic_exam_pub.cpp  topic_exam_sub.cpp
topic_exam/: CMakeLists.txt  README.md  package.xml
topic_exam/src/: topic_exam_pub.cpp
week12/pybullet_exam/pybullet_homework/: case_pick_and_place_blind.py
week2/action_exam/: CMakeLists.txt  package.xml
week2/action_exam/src/: action_exam_client.cpp  action_exam_server.cpp
week2/service_exam/: CMakeLists.txt  package.xml
week2/service_exam/include/service_exam/: myserviceRequest.h
week2/service_exam/src/: service_exam_client.cpp  service_exam_server.cpp
week2/topic_exam/src/: topic_exam_sub.cpp
week3/service_exam2/: CMakeLists.txt  package.xml
week3/service_exam2/launch/: hw3.launch.py
week3/service_exam2/src/: service_exam_client2.cpp  service_exam_server2.cpp
week9/gazebo_exam/: CMakeLists.txt
week9/gazebo_exam/src/: step2_hw.cpp
week9/moveit2_exam/src/: moveit2_practice_sample.cpp
